# Franka-Research-3-with-ROS-2-Imvia-lab

./: README.md
franka_ros2_ws/install/: local_setup.sh  setup.sh
franka_ros2_ws/install/OpenCV/lib/: libopencv_calib3d.so.4.10.0  libopencv_calib3d.so.410  libopencv_features2d.so.4.10.0  libopencv_features2d.so.410  libopencv_flann.so.4.10.0  libopencv_flann.so.410  libopencv_gapi.so.410  libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_imgcodecs.so.410  libopencv_imgproc.so.410  libopencv_ml.so.4.10.0  libopencv_ml.so.410  libopencv_objdetect.so.4.10.0  libopencv_objdetect.so.410  libopencv_photo.so.4.10.0  libopencv_stitching.so.4.10.0  libopencv_stitching.so.410  libopencv_video.so.4.10.0  libopencv_video.so.410  libopencv_videoio.so.4.10.0
franka_ros2_ws/install/VISP/lib/: libvisp_ar.so.3.6.1  libvisp_blob.so.3.6.1  libvisp_detection.so.3.6.1  libvisp_dnn_tracker.so.3.6  libvisp_dnn_tracker.so.3.6.1  libvisp_gui.so.3.6.1  libvisp_imgproc.so.3.6.1  libvisp_io.so.3.6  libvisp_io.so.3.6.1  libvisp_klt.so.3.6.1  libvisp_mbt.so.3.6  libvisp_mbt.so.3.6.1  libvisp_me.so.3.6  libvisp_me.so.3.6.1  libvisp_robot.so.3.6  libvisp_robot.so.3.6.1  libvisp_sensor.so.3.6  libvisp_sensor.so.3.6.1  libvisp_tt.so.3.6.1  libvisp_tt_mi.so.3.6  libvisp_tt_mi.so.3.6.1  libvisp_vision.so.3.6.1  libvisp_visual_features.so.3.6  libvisp_visual_features.so.3.6.1  libvisp_vs.so.3.6.1
franka_ros2_ws/install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.5
franka_ros2_ws/install/franka_custom_controller/share/franka_custom_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
franka_ros2_ws/install/librealsense2/lib/: librealsense2-gl.so.2.55.1  librealsense2.so.2.55
franka_ros2_ws/install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.5
franka_ros2_ws/install/moveit_core/include/: moveit_butterworth_filter_export.h  moveit_collision_detection_export.h  moveit_collision_distance_field_export.h  moveit_smoothing_base_export.h
franka_ros2_ws/install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.5  libmoveit_butterworth_filter.so.2.5.5  libmoveit_collision_detection.so.2.5.5  libmoveit_collision_detection_bullet.so.2.5.5  libmoveit_collision_detection_fcl.so.2.5.5  libmoveit_collision_distance_field.so.2.5.5  libmoveit_constraint_samplers.so.2.5.5  libmoveit_distance_field.so.2.5.5  libmoveit_dynamics_solver.so.2.5.5  libmoveit_exceptions.so.2.5.5  libmoveit_kinematic_constraints.so.2.5.5  libmoveit_kinematics_metrics.so.2.5.5  libmoveit_planning_interface.so.2.5.5  libmoveit_planning_request_adapter.so.2.5.5  libmoveit_planning_scene.so.2.5.5  libmoveit_robot_model.so.2.5.5  libmoveit_robot_state.so.2.5.5  libmoveit_robot_trajectory.so.2.5.5  libmoveit_smoothing_base.so.2.5.5  libmoveit_test_utils.so.2.5.5  libmoveit_trajectory_processing.so.2.5.5  libmoveit_transforms.so.2.5.5  libmoveit_utils.so.2.5.5
franka_ros2_ws/install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.5  libmotion_planning_pipeline_plugin.so.2.5.5  libmoveit_global_planner_component.so.2.5.5  libmoveit_hybrid_planning_manager.so.2.5.5  libmoveit_local_planner_component.so.2.5.5  libreplan_invalidated_trajectory_plugin.so.2.5.5  libsimple_sampler_plugin.so.2.5.5  libsingle_plan_execution_plugin.so.2.5.5
franka_ros2_ws/install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.5.5  libmoveit_cached_ik_kinematics_plugin.so.2.5.5  libmoveit_lma_kinematics_plugin.so.2.5.5  libmoveit_srv_kinematics_plugin.so.2.5.5
franka_ros2_ws/install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.5.5
franka_ros2_ws/install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.5.5  (+1 more)
franka_ros2_ws/log/: latest_build
franka_ros2_ws/src/: send_move_group_goal.py
franka_ros2_ws/src/Aruco/: README.md  aruco_handler.py  cameraCalibration.py  camera_handler.py  evaluate_calibration.py  load_data.py  main_calibrate.py  main_marker_detector.py  main_realsense.py  real_sense_camera.py  ros_camera.py  takepic_realsense.py  template_class.py  utils.py
franka_ros2_ws/src/camera_publisher/: package.xml  setup.cfg  setup.py
franka_ros2_ws/src/franka_custom_controller/: CMakeLists.txt  custom_position_controller.xml
franka_ros2_ws/src/franka_custom_controller/config/: custom_position_controller.yaml
franka_ros2_ws/src/franka_custom_controller/launch/: custom_position_controller_launch.py
franka_ros2_ws/src/franka_custom_controller/src/: custom_position_controller.cpp
franka_ros2_ws/src/moveit2_scripts/: CMakeLists.txt
franka_ros2_ws/src/moveit2_scripts/launch/: approach_retreat.launch.py  test_trajectory.launch.py  test_trajectory2.launch.py
franka_ros2_ws/src/moveit2_scripts/src/: approach_retreat.cpp  test_gripper.cpp  test_trajectory.cpp  test_trajectory2.cpp  test_trajectory3.cpp
franka_ros2_ws/src/mtc_tutorial/: CMakeLists.txt
(+1720 files in other folders)
