<package format="2">
  <name>franka_custom_controller</name>
  <version>0.0.1</version>
  <description>Custom controller for Franka Emika</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>franka_hardware</depend>
  <build_depend>ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>

